--- a/apps/devices-clientapp/src/styles.scss
+++ b/apps/devices-clientapp/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+ul {
+    list-style-type: none;
+}
+li{
+
+    background-color: rgb(248, 247, 228);
+}
+body{
+    background-color: rgb(236, 217, 191);
+}
