--- a/apps/devices-clientapp/src/styles.scss
+++ b/apps/devices-clientapp/src/styles.scss
@@ -4,8 +4,8 @@ ul {
 }
 li{
 
-    background-color: rgb(248, 247, 228);
+  background-color: white
 }
 body{
-    background-color: rgb(236, 217, 191);
+    background-color: rgb(214, 225, 226);
 }
